syntax = "proto3";

package greet;
option go_package="greetpb";

message Greeting{
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message DeadlineRequest {
    Greeting greeting = 1;
}

message DeadlineResponse {
    string result = 1;
}

service GreetService{
    //Unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};

    // Unary with deadline
    rpc GreetWithDeadline(DeadlineRequest) returns (DeadlineResponse) {};
}